styles/navbar.module.css
.nav {
    display: flex;
    padding: 16px;
    padding-bottom: 20px;
    justify-content: space-between;
    align-items: center;
    background-color: #303030;
    z-index: 100;
    width: 100%;
    position: fixed;
    left: 0;
    top: 0;
    -webkit-mask-image: linear-gradient(180deg, rgba(23,24,26,1) 0%, rgba(23,24,26,1) 70%, rgba(23,24,26,0) 100%);
    mask-image: linear-gradient(180deg, rgba(23,24,26,1) 0%, rgba(23,24,26,1) 70%, rgba(23,24,26,0) 100%);
}
.nav .logo {
    color: white;
}
.nav a {
    text-decoration: none;
    cursor: pointer;
    color: white;
}

.nav__menu_bar {
    font-size: 35px;
    cursor: pointer;
    color: white;
}
.nav__menu_list{
    display: flex;
    flex-direction: column;
    position: fixed;
    top: 60px;
    width: 288px;
    row-gap: 24px;
    right: -288px;
    padding: 24px 16px;
    transition: all 0.2s;
    min-height: calc(100vh - 60px);
    background-color: #303030;
}
.nav__menu_list.active{
    right: 0;
}
.nav__link{
    font-size: 18px; 
    position: relative;
    transition: all 0.2s;
}
  
.nav__link:hover{
     font-weight: bold;
}
  
.center{
      min-height: 600px;
      display: flex;
      justify-content: center;
      align-items: center;
}

@media screen and (min-width: 868px) {
    .nav__menu_bar{
        display: none;
    }
    .nav__menu_list{
        position: unset;
        flex-direction: row;
        min-height: fit-content;
        width: fit-content;
        column-gap: 24px;
        align-items: center;
        background-color: #303030;
    }
    .nav__link::before{
        content: '';
        position: absolute;
        width: 0%;
        height: 6px;
        bottom: -16px;
        left: 0;
        background-color: white;
        transition: all 0.2s;
    }
    
    .nav__link:hover:before{
        width: 100%;
    }
}

